%% Mermaid ER diagram — bread-tour database
%% Last generated: 2026-06-21
erDiagram
    PROFILES {
        uuid id PK
        text display_name
        timestamptz created_at
        timestamptz updated_at
    }

    TOURS {
        uuid id PK
        uuid owner_id FK
        text name
        timestamptz created_at
        timestamptz updated_at
    }

    TOUR_MEMBERS {
        uuid id PK
        uuid tour_id FK
        uuid user_id FK
        text role
        timestamptz joined_at
    }

    TOUR_INVITES {
        uuid id PK
        uuid tour_id FK
        text invited_email
        text token
        text status
        uuid invited_by FK
        timestamptz created_at
        timestamptz updated_at
    }

    SPOTS {
        uuid id PK
        uuid tour_id FK
        text name
        text kind
        float lat
        float lng
        int radius_m
        int order_index
        timestamptz created_at
        timestamptz updated_at
    }

    SPOT_MENUS {
        uuid id PK
        uuid spot_id FK
        uuid author_id FK
        text menu_text
        jsonb images
        timestamptz created_at
        timestamptz updated_at
    }

    SPOT_KINDS {
        uuid id PK
        uuid tour_id FK
        text label
        timestamptz created_at
    }

    STAMPS {
        uuid id PK
        uuid spot_id FK
        uuid tour_id FK
        uuid user_id FK
        text method
        timestamptz arrived_at
        timestamptz cancelled_at
        timestamptz created_at
        timestamptz updated_at
    }

    MANUAL_CHECKIN_REQUESTS {
        uuid id PK
        uuid spot_id FK
        uuid tour_id FK
        uuid requester_id FK
        uuid confirmer_id FK
        text status
        timestamptz created_at
        timestamptz updated_at
    }

    SPOT_SETTLEMENTS {
        uuid id PK
        uuid spot_id FK
        uuid tour_id FK
        int amount
        uuid_array payer_ids
        uuid_array participant_ids
        uuid_array settled_ids
        uuid created_by FK
        timestamptz created_at
        timestamptz updated_at
    }

    TOURS ||--o{ TOUR_MEMBERS : "has"
    TOURS ||--o{ TOUR_INVITES : "has"
    TOURS ||--o{ SPOTS : "contains"
    TOURS ||--o{ SPOT_KINDS : "defines"
    SPOTS ||--o{ SPOT_MENUS : "has"
    SPOTS ||--o{ STAMPS : "has"
    SPOTS ||--o| SPOT_SETTLEMENTS : "settled by"
    SPOTS ||--o{ MANUAL_CHECKIN_REQUESTS : "has"
    PROFILES ||--o{ SPOT_MENUS : "authors"
